--- a/src/template/templates/single_mode/Cargo.toml.hbs
+++ b/src/template/templates/single_mode/Cargo.toml.hbs
@@ -6,8 +6,8 @@ description = "{{description}}"
 authors = ["{{author_name}}"]
 
 [dependencies]
-axum = "0.7"
-tokio = { version = "1.35", features = ["full"] }
+axum = "0.8"
+tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = { version = "1", features = ["derive"] }
@@ -15,12 +15,12 @@ serde_json = "1"
 anyhow = "1"
 
 {{#if has_database}}
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite"] }
 {{/if}}
 
 {{#if has_auth}}
-jsonwebtoken = "9"
-bcrypt = "0.15"
+jsonwebtoken = "10"
+bcrypt = "0.18"
 {{/if}}
 
 {{#if has_biz_error}}
