--- a/src/template/templates/workspace_mode/api/src/main.rs.hbs
+++ b/src/template/templates/workspace_mode/api/src/main.rs.hbs
@@ -22,8 +22,17 @@ async fn main() -> anyhow::Result<()> {
     let config = Config::from_env()?;
 
 {{#if has_database}}
-    // TODO: Initialize database connection pool
-    // let pool = {{project_name_snake}}_infrastructure::db::create_pool(&config.database_url.unwrap()).await?;
+    // Initialize database connection pool
+    if let Some(ref db_url) = config.database_url {
+        tracing::info!("Database URL configured: {}...", &db_url[..db_url.len().min(20)]);
+        // TODO: Initialize connection pool
+        // let pool = {{project_name_snake}}_infrastructure::db::create_pool(db_url).await?;
+    }
+{{/if}}
+{{#if has_auth}}
+    if config.jwt_secret.is_some() {
+        tracing::info!("JWT authentication enabled");
+    }
 {{/if}}
 
     // Build application with routes
