fix: suppress dead_code warning for db module in single_mode template
- Add #[allow(dead_code)] to db module import in single_mode main.rs.hbs
- DbPool and related functions are scaffold code for users to integrate
- Fixes CI failures: test_all_features_project_compiles, test_database_auth_project_compiles

--- a/src/template/templates/single_mode/src/main.rs.hbs
+++ b/src/template/templates/single_mode/src/main.rs.hbs
@@ -3,6 +3,7 @@ use axum::Router;
 #[path = "config.rs"]
 mod config;
 {{#if has_database}}
+#[allow(dead_code)]
 #[path = "db.rs"]
 mod db;
 {{/if}}
