--- a/src/template/templates/workspace_mode/api/src/main.rs.hbs
+++ b/src/template/templates/workspace_mode/api/src/main.rs.hbs
@@ -1,3 +1,4 @@
+{{#block "imports"}}
 use axum::Router;
 
 mod config;
@@ -7,9 +8,12 @@ mod middleware;
 {{/if}}
 
 use config::Config;
+{{/block}}
 
+{{#block "main_body"}}
 #[tokio::main]
 async fn main() -> anyhow::Result<()> {
+{{#block "config"}}
     // Initialize tracing
     tracing_subscriber::fmt()
         .with_env_filter(
@@ -34,13 +38,18 @@ async fn main() -> anyhow::Result<()> {
         tracing::info!("JWT authentication enabled");
     }
 {{/if}}
+{{/block}}
 
+{{#block "middleware"}}
+{{/block}}
     // Build application with routes
     let app = Router::new()
+{{#block "routes"}}
         .merge(handlers::health::router())
         {{#if has_auth}}
         .merge(handlers::auth::router())
-        {{/if}};
+        {{/if}}
+{{/block}};
 
     let bind_address = config.bind_address();
     let listener = tokio::net::TcpListener::bind(&bind_address).await?;
@@ -51,3 +60,4 @@ async fn main() -> anyhow::Result<()> {
 
     Ok(())
 }
+{{/block}}
